# TekWFM2

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml
tekwfm2/: __init__.py  ifaces.py  tekwfm.py
tests/: test_parse.py
