
[project]
name = "tekwfm2"
version = "0.2.0"
description = "Parser for Tektronix WFM v.1 & v.2 binary files"
readme = "README.md"
authors = [{ name = "Pavel Gostev", email = "gostev.pavel@physics.msu.ru" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = ["numpy>=1.20,<2.0"]

[project.urls]
Homepage = "https://github.com/vongostev/tekwfm2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    ".github",
    ".venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C901"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    ".github",
    ".venv",
    "build",
    "dist",
]
